<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">CellPost!</string>
    
    <!-- Activities Titles -->
    <string name="acc_list">Skonfigurowane konta e-mail</string>
    <string name="acc_config">Konfigurator konta</string>
    <string name="acc_add">Dodaj nowe konto e-mail</string>
    <string name="mail_send">Napisz wiadomość</string>
    <string name="mail_inbox">Skrzynka odbiorcza</string>
    <string name="mail_drafts">Kopie robocze</string>
    <string name="mail_sent">Wysłane wiadomości</string>
    <string name="settings_main">Ustawienia</string>
    <string name="settings_prefs">Ustawienia aplikacji</string>
    
    <!-- Menu Options -->
    <string name="menu_add">Dodaj</string>
	<string name="menu_edit">Edytuj</string>
	<string name="menu_delete">Usuń</string>   
	<string name="menu_send">Wyślij</string>
	<string name="menu_save">Zapisz</string>
	<string name="menu_reply">Odpowiedz</string>
	<string name="menu_forward">Przekaż</string>
	<string name="menu_refresh">Odśwież</string>
	
	<!-- Accounts Config Form -->
    <string name="account_conf_address">Adres e-mail</string> 
    <string name="account_conf_user">Nazwa użytkownika</string>
    <string name="account_conf_pass">Hasło</string>
    <string name="account_conf_account_type">Typ konta</string>
    <string name="account_conf_in_server">Serwer przychodzący</string>
    <string name="account_conf_out_server">Serwer wychodzący</string>
    <string name="account_conf_in_port">Port serwera przychodzącego</string>
    <string name="account_conf_out_port">Port serwera wychodzącego</string>
    <string name="account_conf_in_security">Opcje bezpieczeństwa</string>
    <string name="account_conf_out_security">Opcje bezpieczeństwa</string>
    <string name="account_conf_delete_emails">Usuwaj wiadomości z serwera</string>
    <string name="account_conf_imap_path_pref">IMAP path prefix</string>
    <string name="account_conf_default">Przy wysyłaniu wiadomości użyj konta jako domyślnego</string>
    <string name="account_conf_nick">Pseudonim do wysyłania wiadomości</string>
    
    <!-- Mail Sending Form -->
    <string name="mail_if_sent">Wiadomość wysłana!</string> 
    <string name="mail_to">Do</string> 
    <string name="mail_cc">CC</string> 
    <string name="mail_bcc">Ukryta kopia</string> 
    <string name="mail_subject">Tytuł</string> 
    <string name="mail_contents">Treść</string> 
    
    <!-- User Preferences Settings Form -->
    <string name="settin_default_acc">Ustaw domyślne konto do wysyłania wiadomości</string> 
    <string name="settin_notify_new_emails">Powiadom o nowych wiadomościach</string> 
    <string name="settin_check_4_emails">Sprawdzaj czy są nowe wiadomości co:</string> 
   
    <!-- Buttons -->
    <string name="ok">OK</string>
    <string name="cancel">Anuluj</string>
    <string name="next">Dalej</string>
    <string name="back">Powrót</string>
    <string name="send">Wyślij</string>
    
    <!-- Messages -->
    <string name="emailsNotifier">NOWE EMAILE!</string>
    
</resources>
