<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent" 
                android:layout_height="fill_parent"
                android:padding="10px"
                android:isScrollContainer="true" 
                android:scrollbars="vertical"
                android:scrollbarAlwaysDrawVerticalTrack="true" >
                
	<RelativeLayout android:layout_width="fill_parent" 
	                android:layout_height="wrap_content">   
	                 
	    <TextView android:id="@+id/addressLabel" 
	              android:layout_width="fill_parent" 
	              android:layout_height="wrap_content" 
	              android:text="@string/account_conf_address" />
	
	    <EditText android:id="@+id/address" 
	              android:layout_width="fill_parent" 
	              android:layout_height="wrap_content" 
	              android:background="@android:drawable/editbox_background" 
	              android:layout_below="@id/addressLabel" />
	
		<TextView android:id="@+id/userLabel" 
	              android:layout_width="fill_parent" 
	              android:layout_height="wrap_content" 
	              android:text="@string/account_conf_user" 
	              android:layout_below="@id/address" />
	              
	    <EditText android:id="@+id/user" 
	              android:layout_width="fill_parent" 
	              android:layout_height="wrap_content" 
	              android:background="@android:drawable/editbox_background"
	              android:layout_below="@id/userLabel" />
	
		<TextView android:id="@+id/passLabel" 
	              android:layout_width="fill_parent" 
	              android:layout_height="wrap_content" 
	              android:text="@string/account_conf_pass" 
	              android:layout_below="@id/user" />
	              
	    <EditText android:id="@+id/pass" 
	              android:layout_width="fill_parent" 
	              android:layout_height="wrap_content"  
	              android:password="true"
	              android:background="@android:drawable/editbox_background"
	              android:layout_below="@id/passLabel" />
	
		<TextView android:id="@+id/accTypeLabel" 
	              android:layout_width="fill_parent" 
	              android:layout_height="wrap_content" 
	              android:text="@string/account_conf_account_type" 
	              android:layout_below="@id/pass" />
	
		<Spinner android:id="@+id/accountType" 
	    		 android:layout_height="wrap_content" 
	    		 android:layout_below="@id/accTypeLabel" 
	    		 android:layout_width="fill_parent" 
	    		 android:entries="@array/account_conf_account_types" />
		
		<TextView android:id="@+id/incomingServerLabel" 
	              android:layout_width="fill_parent" 
	              android:layout_height="wrap_content" 
	              android:text="@string/account_conf_in_server" 
	              android:layout_below="@id/accountType" />
		  
	    <EditText android:id="@+id/incomingServer" 
	              android:layout_width="fill_parent" 
	              android:layout_height="wrap_content" 
	              android:background="@android:drawable/editbox_background"
	              android:layout_below="@id/incomingServerLabel" />
	              
	    <TextView android:id="@+id/incomingPortLabel" 
	              android:layout_width="fill_parent" 
	              android:layout_height="wrap_content" 
	              android:text="@string/account_conf_in_port" 
	              android:layout_below="@id/incomingServer" />
	              
	    <EditText android:id="@+id/incomingPort" 
	              android:layout_width="fill_parent" 
	              android:layout_height="wrap_content" 
	              android:background="@android:drawable/editbox_background"
	              android:layout_below="@id/incomingPortLabel" /> 
	              
	    <TextView android:id="@+id/incomingSecurityLabel" 
	              android:layout_width="fill_parent" 
	              android:layout_height="wrap_content" 
	              android:text="@string/account_conf_in_security" 
	              android:layout_below="@id/incomingPort" /> 
	              
	    <Spinner android:id="@+id/incomingSecurity" 
	    		 android:layout_height="wrap_content" 
	    		 android:layout_below="@id/incomingSecurityLabel" 
	    		 android:layout_width="fill_parent" 
	    		 android:entries="@array/account_conf_security_options" />
	    		 
	    <TextView android:id="@+id/deleteEmailsLabel" 
	              android:layout_width="fill_parent" 
	              android:layout_height="wrap_content" 
	              android:text="@string/account_conf_delete_emails" 
	              android:layout_below="@id/incomingSecurity" /> 
	    		 
	    <Spinner android:id="@+id/deleteEmails" 
	    		 android:layout_height="wrap_content" 
	    		 android:layout_below="@id/deleteEmailsLabel" 
	    		 android:layout_width="fill_parent" 
	    		 android:entries="@array/delete_from_serv_options" />    		 
	    		 
	    <TextView android:id="@+id/outgoingServerLabel" 
	              android:layout_width="fill_parent" 
	              android:layout_height="wrap_content" 
	              android:text="@string/account_conf_out_server"
	              android:layout_below="@id/deleteEmails" />
		  
	    <EditText android:id="@+id/outgoingServer" 
	              android:layout_width="fill_parent" 
	              android:layout_height="wrap_content" 
	              android:background="@android:drawable/editbox_background"
	              android:layout_below="@id/outgoingServerLabel" />
	              
	    <TextView android:id="@+id/outgoingPortLabel" 
	              android:layout_width="fill_parent" 
	              android:layout_height="wrap_content" 
	              android:text="@string/account_conf_out_port" 
	              android:layout_below="@id/outgoingServer" />
	              
	    <EditText android:id="@+id/outgoingPort" 
	              android:layout_width="fill_parent" 
	              android:layout_height="wrap_content" 
	              android:background="@android:drawable/editbox_background"
	              android:layout_below="@id/outgoingPortLabel" /> 
	              
	    <TextView android:id="@+id/outgoingSecurityLabel" 
	              android:layout_width="fill_parent" 
	              android:layout_height="wrap_content" 
	              android:text="@string/account_conf_out_security" 
	              android:layout_below="@id/outgoingPort" /> 
	              
	    <Spinner android:id="@+id/outgoingSecurity" 
	    		 android:layout_height="wrap_content" 
	    		 android:layout_below="@id/outgoingSecurityLabel" 
	    		 android:layout_width="fill_parent" 
	    		 android:entries="@array/account_conf_security_options" />
	    		 
	    <TextView android:id="@+id/nickLabel" 
	              android:layout_width="fill_parent" 
	              android:layout_height="wrap_content" 
	              android:text="@string/account_conf_nick" 
	              android:layout_below="@id/outgoingSecurity" /> 		
	              
	    <EditText android:id="@+id/nick" 
	              android:layout_width="fill_parent" 
	              android:layout_height="wrap_content" 
	              android:background="@android:drawable/editbox_background"
	              android:layout_below="@id/nickLabel" />  
	             
	    <CheckBox android:id="@+id/defaultAccount" 
	              android:layout_width="fill_parent" 
	              android:layout_height="wrap_content" 
	              android:text="@string/account_conf_default" 
	              android:layout_below="@id/nick" />  
		
		<Button android:id="@+id/ok"
	    		android:layout_width="100px" 
	            android:layout_height="wrap_content"
	            android:layout_below="@id/defaultAccount"
	            android:layout_alignParentRight="true"
	            android:layout_alignParentBottom="true"
	            android:layout_marginLeft="10px"
	            android:layout_marginRight="10px"
	            android:layout_marginTop="10px"
	            android:text="@string/ok" 
	            />
	            
	    <Button android:id="@+id/cancel"
	    		android:layout_width="100px" 
	            android:layout_height="wrap_content"
	           	android:layout_below="@id/defaultAccount"
	            android:layout_marginLeft="10px"
	            android:layout_marginTop="10px"
	            android:text="@string/cancel" 
	            />
	</RelativeLayout>
</ScrollView>
