<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                style="@style/CellPostFormLayoutStyle">
                
	<RelativeLayout android:layout_width="fill_parent" 
	                android:layout_height="wrap_content">   
	                 
	    <TextView android:id="@+id/defAccLabel" 
	              style="@style/CellPostFormLabelStyle"
	              android:layout_height="wrap_content"
	              android:text="@string/settin_default_acc" />
	
	    <Spinner android:id="@+id/defaultAccount" 
	    		 android:layout_height="wrap_content" 
	    		 android:layout_below="@id/defAccLabel" 
	    		 android:layout_width="fill_parent"/>
	
		<CheckBox android:id="@+id/newEmailsNotif" 
	              style="@style/CellPostFormCheckboxStyle" 
	              android:text="@string/settin_notify_new_emails" 
	              android:layout_below="@id/defaultAccount" />  
	
		<TextView android:id="@+id/newEmailsCheckLabel" 
	              style="@style/CellPostFormLabelStyle"
	              android:text="@string/settin_check_4_emails" 
	              android:layout_below="@id/newEmailsNotif" />
	              
	    <Spinner android:id="@+id/newEmailsCheck" 
	    		 android:layout_height="wrap_content" 
	    		 android:layout_below="@id/newEmailsCheckLabel" 
	    		 android:layout_width="fill_parent" 
	    		 android:entries="@array/new_emails_check"/>  
		
		<Button android:id="@+id/ok"
	    		android:layout_width="100px" 
	            android:layout_height="wrap_content"
	            android:layout_below="@id/newEmailsCheck"
	            android:layout_alignParentRight="true"
	            android:layout_alignParentBottom="true"
	            android:layout_marginLeft="10px"
	            android:layout_marginRight="10px"
	            android:layout_marginTop="10px"
	            android:text="@string/ok" 
	            />
	           
	</RelativeLayout>
</ScrollView>
